// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavedObjectSaveModal should render matching snapshot 1`] = `
<EuiModal
  className="kbnSavedObjectSaveModal"
  data-test-subj="savedObjectSaveModal"
  onClose={[Function]}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle>
      <MemoizedFormattedMessage
        defaultMessage="Save {objectType}"
        id="savedObjects.saveModal.saveTitle"
        values={
          Object {
            "objectType": "visualization",
          }
        }
      />
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiForm
      component="form"
      id="generated-id_form"
      onSubmit={[Function]}
    >
      <EuiFormRow
        error="A title is required"
        fullWidth={true}
        isInvalid={false}
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Title"
            id="savedObjects.saveModal.titleLabel"
          />
        }
      >
        <EuiFieldText
          data-test-subj="savedObjectTitle"
          fullWidth={true}
          inputRef={
            Object {
              "current": null,
            }
          }
          isInvalid={false}
          onChange={[Function]}
          value="Saved Object title"
        />
      </EuiFormRow>
      <EuiFormRow
        fullWidth={true}
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Description"
            id="savedObjects.saveModal.descriptionLabel"
          />
        }
        labelAppend={
          <EuiText
            color="subdued"
            size="xs"
          >
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Optional"
              id="savedObjects.saveModal.optional"
            />
          </EuiText>
        }
      >
        <EuiTextArea
          data-test-subj="savedObjectDescription"
          fullWidth={true}
          onChange={[Function]}
          value=""
        />
      </EuiFormRow>
    </EuiForm>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiFlexGroup
      alignItems="center"
      justifyContent="flexEnd"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          data-test-subj="saveCancelButton"
          onClick={[Function]}
        >
          <MemoizedFormattedMessage
            defaultMessage="Cancel"
            id="savedObjects.saveModal.cancelButtonLabel"
          />
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="confirmSaveSavedObjectButton"
          fill={true}
          form="generated-id_form"
          isLoading={false}
          type="submit"
        >
          Save
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalFooter>
</EuiModal>
`;

exports[`SavedObjectSaveModal should render matching snapshot when custom isValid is set 1`] = `
<EuiModal
  className="kbnSavedObjectSaveModal"
  data-test-subj="savedObjectSaveModal"
  onClose={[Function]}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle>
      <MemoizedFormattedMessage
        defaultMessage="Save {objectType}"
        id="savedObjects.saveModal.saveTitle"
        values={
          Object {
            "objectType": "visualization",
          }
        }
      />
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiForm
      component="form"
      id="generated-id_form"
      onSubmit={[Function]}
    >
      <EuiFormRow
        error="A title is required"
        fullWidth={true}
        isInvalid={false}
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Title"
            id="savedObjects.saveModal.titleLabel"
          />
        }
      >
        <EuiFieldText
          data-test-subj="savedObjectTitle"
          fullWidth={true}
          inputRef={
            Object {
              "current": null,
            }
          }
          isInvalid={false}
          onChange={[Function]}
          value="Saved Object title"
        />
      </EuiFormRow>
      <EuiFormRow
        fullWidth={true}
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Description"
            id="savedObjects.saveModal.descriptionLabel"
          />
        }
        labelAppend={
          <EuiText
            color="subdued"
            size="xs"
          >
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Optional"
              id="savedObjects.saveModal.optional"
            />
          </EuiText>
        }
      >
        <EuiTextArea
          data-test-subj="savedObjectDescription"
          fullWidth={true}
          onChange={[Function]}
          value=""
        />
      </EuiFormRow>
    </EuiForm>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiFlexGroup
      alignItems="center"
      justifyContent="flexEnd"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          data-test-subj="saveCancelButton"
          onClick={[Function]}
        >
          <MemoizedFormattedMessage
            defaultMessage="Cancel"
            id="savedObjects.saveModal.cancelButtonLabel"
          />
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="confirmSaveSavedObjectButton"
          fill={true}
          form="generated-id_form"
          isLoading={false}
          type="submit"
        >
          Save
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalFooter>
</EuiModal>
`;

exports[`SavedObjectSaveModal should render matching snapshot when custom isValid is set 2`] = `
<EuiModal
  className="kbnSavedObjectSaveModal"
  data-test-subj="savedObjectSaveModal"
  onClose={[Function]}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle>
      <MemoizedFormattedMessage
        defaultMessage="Save {objectType}"
        id="savedObjects.saveModal.saveTitle"
        values={
          Object {
            "objectType": "visualization",
          }
        }
      />
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiForm
      component="form"
      id="generated-id_form"
      onSubmit={[Function]}
    >
      <EuiFormRow
        error="A title is required"
        fullWidth={true}
        isInvalid={false}
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Title"
            id="savedObjects.saveModal.titleLabel"
          />
        }
      >
        <EuiFieldText
          data-test-subj="savedObjectTitle"
          fullWidth={true}
          inputRef={
            Object {
              "current": null,
            }
          }
          isInvalid={false}
          onChange={[Function]}
          value="Saved Object title"
        />
      </EuiFormRow>
      <EuiFormRow
        fullWidth={true}
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Description"
            id="savedObjects.saveModal.descriptionLabel"
          />
        }
        labelAppend={
          <EuiText
            color="subdued"
            size="xs"
          >
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Optional"
              id="savedObjects.saveModal.optional"
            />
          </EuiText>
        }
      >
        <EuiTextArea
          data-test-subj="savedObjectDescription"
          fullWidth={true}
          onChange={[Function]}
          value=""
        />
      </EuiFormRow>
    </EuiForm>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiFlexGroup
      alignItems="center"
      justifyContent="flexEnd"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          data-test-subj="saveCancelButton"
          onClick={[Function]}
        >
          <MemoizedFormattedMessage
            defaultMessage="Cancel"
            id="savedObjects.saveModal.cancelButtonLabel"
          />
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="confirmSaveSavedObjectButton"
          fill={true}
          form="generated-id_form"
          isLoading={false}
          type="submit"
        >
          Save
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalFooter>
</EuiModal>
`;

exports[`SavedObjectSaveModal should render matching snapshot when given options 1`] = `
<EuiModal
  className="kbnSavedObjectSaveModal kbnSavedObjectsSaveModal--wide"
  data-test-subj="savedObjectSaveModal"
  onClose={[Function]}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle>
      <MemoizedFormattedMessage
        defaultMessage="Save {objectType}"
        id="savedObjects.saveModal.saveTitle"
        values={
          Object {
            "objectType": "visualization",
          }
        }
      />
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiForm
      component="form"
      id="generated-id_form"
      onSubmit={[Function]}
    >
      <EuiFlexGroup
        gutterSize="m"
      >
        <EuiFlexItem>
          <EuiFormRow
            error="A title is required"
            fullWidth={true}
            isInvalid={false}
            label={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Title"
                id="savedObjects.saveModal.titleLabel"
              />
            }
          >
            <EuiFieldText
              data-test-subj="savedObjectTitle"
              fullWidth={true}
              inputRef={
                Object {
                  "current": null,
                }
              }
              isInvalid={false}
              onChange={[Function]}
              value="Saved Object title"
            />
          </EuiFormRow>
          <EuiFormRow
            fullWidth={true}
            label={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Description"
                id="savedObjects.saveModal.descriptionLabel"
              />
            }
            labelAppend={
              <EuiText
                color="subdued"
                size="xs"
              >
                <Memo(MemoizedFormattedMessage)
                  defaultMessage="Optional"
                  id="savedObjects.saveModal.optional"
                />
              </EuiText>
            }
          >
            <EuiTextArea
              data-test-subj="savedObjectDescription"
              fullWidth={true}
              onChange={[Function]}
              value=""
            />
          </EuiFormRow>
          <div>
            Hello! Main options
          </div>
        </EuiFlexItem>
        <EuiFlexItem>
          <div>
            Hey there! Options on the right
          </div>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiForm>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiFlexGroup
      alignItems="center"
      justifyContent="flexEnd"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          data-test-subj="saveCancelButton"
          onClick={[Function]}
        >
          <MemoizedFormattedMessage
            defaultMessage="Cancel"
            id="savedObjects.saveModal.cancelButtonLabel"
          />
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="confirmSaveSavedObjectButton"
          fill={true}
          form="generated-id_form"
          isLoading={false}
          type="submit"
        >
          Save
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiModalFooter>
</EuiModal>
`;
